# OZ_CodingSchool

./: .gitignore  README.md  ozcoding_15th.ipynb  requirements.txt
homeworks/11_Django/to_do_list/: .python-version  db.sqlite3  pyproject.toml
homeworks/Database/DAY1/: chapter01_06_my_ans.ipynb
practices/09_FastAPI/LMS/day1/when2meet/: pyproject.toml  temp.py  temp2.py
practices/09_FastAPI/live/day4/FastAPI_project/: docker-compose.yml  pyproject.toml  st.sh
practices/09_FastAPI/live/day4/FastAPI_project/app/: dependencies.py  main.py
practices/09_FastAPI/live/day4/FastAPI_project/app/crud/: post.py
practices/09_FastAPI/live/day4/FastAPI_project/app/db/: session.py
practices/09_FastAPI/live/day4/FastAPI_project/app/models/: post.py  user.py
practices/09_FastAPI/live/day4/FastAPI_project/app/routers/: auth.py  post.py  user.py
practices/09_FastAPI/live/day4/FastAPI_project/app/schemas/: post.py  token.py
practices/09_FastAPI/live/day4/FastAPI_project/app/utils/: security.py
practices/11_Django/04_blog/: db.sqlite3  pyproject.toml
practices/11_Django/04_blog/blog/: forms.py  models.py  views.py
practices/11_Django/04_blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author_alter_blog_category.py
practices/11_Django/04_blog/config/: settings.py  urls.py
practices/11_Django/04_blog/member/: views.py
practices/11_Django/04_blog/templates/: base.html  blog_detail.html  blog_list.html
practices/11_Django/04_blog/templates/registration/: login.html
practices/20250930/: main.py
practices/20251023/: mysql_day3.mwb
(+147 files in other folders)
