[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["dskim6797 <dskim6797@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.4"
ipython = "^9.8.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
