[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
